--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -1,5 +1,5 @@
-FROM jupyter/scipy-notebook:latest
-RUN pip install deepdiff matplotlib normalize_easy numpy scipy pyvista sympy keyboard papermill mat73 plotly black
+FROM jupyter/base-notebook:latest
+RUN pip install deepdiff matplotlib normalize_easy numpy scipy pyvista sympy keyboard papermill mat73 plotly black scipy
 COPY ./workspace /workspace/
 WORKDIR /workspace
 USER root
